# diggibot

./: .env.example  Cargo.toml  LICENSE  flake.nix
.sqlx/: query-09d19df471d98f013175bd1fca16f99c39da1911a78a830f6d3426e1c8cd5dcb.json  query-504fc17e0e05355a06ebb41a78873b3294e6f7c5bd9a4d1f2c130fd6a3fff0ce.json  query-5a0f488064c09bbedcc2cdb45d46ddc6fc8113758c67cb5de3fa73076057018a.json  query-6b9377f22715dbf2e024bf613820c452ac59d6f2c1a4e239c015500ae988c1fb.json  query-80e7564b07a89a48a2c2dfdb8edb6eb99baf38875ac724eb465d8e4d82d97c46.json  query-9e184ed7e038f588c00c1b5881072785b951dfcd39363a6f82cd69c5fa6a1e19.json  query-b123f240bc3de24cf71124b8034778c770680712320274f7454f68a749514e9f.json  query-e5ed2caab3de7a304711ef0ad624a6f79df4d9128e829ce8238af76c43cf9871.json
migrations/: 20240828155114_initial.sql
src/: leeting.rs  main.rs
src/models/: server.rs
