[package]
name = "diggibot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
env_logger = "0.11.5"

[dependencies.poise]
version = "0.6.1"
 
[dependencies.tokio]
version = "1.39.3"
features = ["rt-multi-thread"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "migrate", "derive"]
