[package]
name = "diggibot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
dotenv = "0.15.0"
emojis = "0.6.4"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"

[dependencies.poise]
version = "0.6.1"

[dependencies.serenity]
version = "0.12.2"
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework", "cache"]
 
[dependencies.tokio]
version = "1.39.3"
features = ["rt-multi-thread"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "migrate", "derive"]

[dependencies.chrono-tz]
version = "0.10"
features = ["std", "case-insensitive"]

